minor change in video caption.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/9voQCAyvg0k" frameborder="0" allowfullscreen></iframe><br>
 
       <p>
-        Video: A more complex demonstration where the robot climbs tilted steps and is allowed to use a "pull down only" banister. 
+        Video: A more complex demonstration where the robot climbs randomly tilted steps and is allowed to use a "pull down only" banister. 
       </p>
 
 
