--- a/sysid.html
+++ b/sysid.html
@@ -24,7 +24,7 @@
       <div id="main" role="main">
         <div class="download-bar">
           <div class="inner">
-            <a href="file:///home/gray/wk3/graythomas.github.io/index.html" class="hcrl">Bio</a>
+            <a href="index.html" class="hcrl">Bio</a>
             <a href="https://scholar.google.com/citations?hl=en&user=WNg0yy8AAAAJ&view_op=list_works" class="scholar">Scholar
             </a>
             <a href="https://github.com/GrayThomas" class="code">GitHub
