--- a/publications.m.html
+++ b/publications.m.html
@@ -7,11 +7,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Overpass|Yantramanav:900">
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
 <script type="text/javascript">
-if (screen.width <= 699) {
-document.location = "publications.m.html";
+if (screen.width >= 700) {
+document.location = "publications.html";
 } </script>
 <title>Gray Cortright Thomas's Publications</title>
 <meta name="description" content="Robotics Researcher, NASA Space Technology Fellow, and Graduate Student at the University of Texas at Austin">
@@ -22,9 +21,9 @@ document.location = "publications.m.html";
 
 <body>
 
-  <div class="wrapper">
+  <div class="mwrapper">
     <header>
-      <h1 class="title">Publications</h1>
+      <h1 class="mtitle">Publications</h1>
       <!-- <h1 class="subtitle">Scholar and Roboticist</h1> -->
     </header>
     
@@ -140,7 +139,6 @@ D.H. Kim, Y. Zhao, <b>G. Thomas</b>, and L. Sentis, "Towards Agility in Complian
 <p> 
 N. Hobbs, R. Cherney, D. Grieneisen, J. Izraelevitz, <b>G. C. Thomas</b>, J. Noglows, E. Kolker, L. Hill. "Athena: Franklin W. Olin College of Engineering 2010 Intelligent Ground Vehicles Competition Entry" Design Report, Intelligent Ground Vehicle Competition, 2010, Oakland University in Rochester, Michigan. 
 </p>
-
 <!-- /bib -->
 
 
