changed stylesheet name

--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Overpass|Yantramanav:900">
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/sage.css" media="screen">
 <script type="text/javascript">
 if (screen.width <= 699) {
 document.location = "publications.m.html";
@@ -45,9 +45,6 @@ document.location = "publications.m.html";
               HCRL
             </a>
             <a href="bio.html" class="gray">Bio</a>
-          <!-- <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis" class="sentis">
-          Luis Sentis
-        </a> -->
       </div>
       <span class="blc"></span><span class="trc"></span>
     </div>
