--- a/index.m.html
+++ b/index.m.html
@@ -6,9 +6,9 @@
   <link rel="shortcut icon" href="images/favicon.ico">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css"><!-- 
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Overpass|Yantramanav:900">
+  <link rel="stylesheet" href="stylesheets/sage.css" media="screen">
+  <!-- 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 -->
