acknowledging some awards.

--- a/publications.html
+++ b/publications.html
@@ -57,10 +57,10 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
-D. Kim, Y. Zhao, <b>G. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," IEEE Trans. Robot., vol. 32, no. 6, pp. 1362-1379, Dec. 2016. <a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[Link]</a> <a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a> 
+D. Kim, Y. Zhao, <b>G. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," IEEE Trans. Robot., vol. 32, no. 6, pp. 1362-1379, Dec. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC-Video 2016]</a><a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[Link]</a> <a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a> 
 </p>
 <p>
-T. Koolen, S. Bertrand, <b>G. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," Int. J. Humanoid Robot., 13, 1650007, Mar. 2016. <a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[Link]</a>
+T. Koolen, S. Bertrand, <b>G. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," Int. J. Humanoid Robot., 13, 1650007, Mar. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[Link]</a>
 </p>
 
 
@@ -74,7 +74,7 @@ T. Koolen, S. Bertrand, <b>G. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsb
 </p>
 
 <p>
-P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," accepted for presentation at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017
+P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," accepted for presentation at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Finalist, Best ICRA 2017 Manipulation Paper]</a>
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
 <!-- <a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a> -->
 </p>
