added the UQ poster

--- a/publications.html
+++ b/publications.html
@@ -117,6 +117,10 @@ I. Olaru, C. Schmidt-Wetekam, N. Payton, <b>G. Thomas</b>, J. Godowski, J. Pratt
 <h3>Poster</h3>
 
 <p>
+<b>G. Thomas</b>, and L. Sentis, "Monte Carlo UQ for Control Systems With Convex Optimization" (Originally: "Identifying Bounded Uncertainty Models with Convex Optimization"), at <i>Uncertainty Quantification and Data-Driven Modeling</i>, Austin, Texas, 2017 <a href="http://uqpm2017.usacm.org/program">[conference]</a><a href="Preprints/ThomasSentis_UncertaintyQuantification2017.pdf">[pdf]</a>
+</p>
+
+<p>
 <b>G. Thomas</b>, and L. Sentis, "Identification of Frequency-Domain Uncertainty for Series Elastic Actuators," in <i>IROS 2016 Workshop on The Mechatronics behind Force/Torque Controlled Robot Actuation: Secrets and Challenges</i>, Daejeon, South Korea, 2016 <a href="http://walk-man.eu/results/workshops/iros-2016-workshop-force-torque-controlled-actuation/submitted-contribution/57-submission-by-gray-thomas/file">[pdf]</a>
 </p>
 
