updated for new submission

--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,10 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
+<b>G. Thomas</b>, and L. Sentis, "Uncertainty—Shape Identification in the Frequency Domain," submitted to IEEE T-AC <a href="Preprints/ThomasSentis2017preTAC.pdf">[pre-print]</a> 
+</p>
+
+<p>
 D. Kim, Y. Zhao, <b>G. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," IEEE Trans. Robot., vol. 32, no. 6, pp. 1362-1379, Dec. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC-Video 2016]</a><a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[Link]</a> <a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a> 
 </p>
 <p>
