updates since the big conferences. Also added table of contents and IHMC section.

--- a/publications.html
+++ b/publications.html
@@ -72,13 +72,13 @@ T. Koolen, S. Bertrand, <b>G. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsb
 
 
 <p>
-<b>G. Thomas</b>, and L. Sentis, "MIMO Identification of Frequency-Domain Unreliability in SEAs," accepted for presentation at <i>The American Control Conterence</i>, Seattle, WA, 2017
+<b>G. Thomas</b>, and L. Sentis, "MIMO Identification of Frequency-Domain Unreliability in SEAs," presented at <i>The American Control Conference</i>, Seattle, WA, 2017
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
-<a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a>
+<a href="Preprints/ThomasSentis2017ACC.pdf">[pdf]</a>
 </p>
 
 <p>
-P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," accepted for presentation at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Finalist, Best ICRA 2017 Manipulation Paper]</a>
+P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," presented at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Finalist, Best ICRA 2017 Manipulation Paper]</a><a href="Preprints/RaoThomasSentisDeshpande2017ICRA.pdf">[pdf]</a>
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
 <!-- <a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a> -->
 </p>
