--- a/publications.m.html
+++ b/publications.m.html
@@ -55,7 +55,6 @@ document.location = "publications.html";
 
 
 <!-- bib -->
-
 <h3>Journal</h3>
 
 <p>
@@ -72,14 +71,15 @@ T. Koolen, S. Bertrand, <b>G. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsb
 
 <h3>Conference</h3>
 
+
 <p>
-<b>G. Thomas</b>, and L. Sentis, "MIMO Identification of Frequency-Domain Unreliability in SEAs," accepted for presentation at <i>The American Control Conterence</i>, Seattle, WA, 2017
+<b>G. Thomas</b>, and L. Sentis, "MIMO Identification of Frequency-Domain Unreliability in SEAs," presented at <i>The American Control Conference</i>, Seattle, WA, 2017
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
-<a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a>
+<a href="Preprints/ThomasSentis2017ACC.pdf">[pdf]</a>
 </p>
 
 <p>
-P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," accepted for presentation at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Finalist, Best ICRA 2017 Manipulation Paper]</a>
+P. Rao, <b>G. Thomas</b>, L. Sentis, and A. Deshpande "Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints," presented at <i>IEEE Conference on Robotics and Automation</i>, Singapore, 2017 <a href="http://www.icra2017.org/conference/awards#Manipulation">[Finalist, Best ICRA 2017 Manipulation Paper]</a><a href="Preprints/RaoThomasSentisDeshpande2017ICRA.pdf">[pdf]</a>
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
 <!-- <a href="Preprints/ThomasSentis2017ACC.pdf">[preprint]</a> -->
 </p>
@@ -146,7 +146,6 @@ D.H. Kim, Y. Zhao, <b>G. Thomas</b>, and L. Sentis, "Towards Agility in Complian
 <p> 
 N. Hobbs, R. Cherney, D. Grieneisen, J. Izraelevitz, <b>G. C. Thomas</b>, J. Noglows, E. Kolker, L. Hill. "Athena: Franklin W. Olin College of Engineering 2010 Intelligent Ground Vehicles Competition Entry" Design Report, Intelligent Ground Vehicle Competition, 2010, Oakland University in Rochester, Michigan. 
 </p>
-<!-- /bib -->
 
 
 
