Added unpublished conference submissions to ICRA and ACC 2018

--- a/bib/gray.bib.html
+++ b/bib/gray.bib.html
@@ -13,18 +13,19 @@ code {
 
 <div id="ThomasSentis201X"><code>
 @preamble{ " \newcommand{\noop}[1]{} " } % a do-nothing command that serves a purpose
-@article{ThomasSentis201X,
-  title={Uncertainty—Shape Identification in the Frequency Domain}
-  author={Thomas, Gray C and Sentis, Luis}, 
-  year="\noop{3001}in press",
-  journal=" ",
+
+@unpublished{ThomasSentis2018TACpre,
+  title={Uncertainty—Shape Identification in the Frequency Domain},
+  author={Thomas, Gray Cortright and Sentis, Luis}, 
+  year="\noop{3001} under review",
+  note=" submitted to IEEE Transactions on Automatic Control",
 }
 
 </code></div>
 <div id="KimEA2016TRO"><code>
 @article{KimEA2016TRO,
   title={Stabilizing series-elastic point-foot bipeds using whole-body operational space control},
-  author={Kim, Donghyun and Zhao, Ye and Thomas, Gray and Fernandez, Benito R and Sentis, Luis},
+  author={Kim, Donghyun and Zhao, Ye and Thomas, Gray Cortright and Fernandez, Benito R and Sentis, Luis},
   journal={IEEE Transactions on Robotics},
   volume={32},
   number={6},
@@ -37,7 +38,7 @@ code {
 <div id="KoolenEA2016IJHR"><code>
 @article{KoolenEA2016IJHR,
   title={Design of a momentum-based control framework and application to the humanoid robot atlas},
-  author={Koolen, Twan and Bertrand, Sylvain and Thomas, Gray and De Boer, Tomas and Wu, Tingfan and Smith, Jesper and Englsberger, Johannes and Pratt, Jerry},
+  author={Koolen, Twan and Bertrand, Sylvain and Thomas, Gray Cortright and De Boer, Tomas and Wu, Tingfan and Smith, Jesper and Englsberger, Johannes and Pratt, Jerry},
   journal={International Journal of Humanoid Robotics},
   volume={13},
   number={01},
@@ -47,11 +48,29 @@ code {
 }
 
 </code></div>
+<div id="ThomasHeSentis2018preACC"><code>
+@unpublished{ThomasHeSentis2018preACC,
+  title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
+  author={Thomas, Gray Cortright and He, Binghan and Sentis, Luis},
+  note={submitted to 2018 American Control Conference (ACC)},
+  year="\noop{3001}under review"
+}
+
+</code></div>
+<div id="SchlossmanThomasSentis2018ICRApre"><code>
+@unpublished{SchlossmanThomasSentis2018ICRApre,
+  title={Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program},
+  author={Schlossman, Rachel and Thomas, Gray Cortright and Sentis, Luis},
+  note={submitted to Robotics and Automation (ICRA), 2018 IEEE Conference on },
+  year="\noop{3001}under review"
+}
+
+</code></div>
 <div id="ThomasSentis2017ACC"><code>
 @inproceedings{ThomasSentis2017ACC,
   title={MIMO identification of frequency-domain unreliability in SEAs},
-  author={Thomas, Gray C and Sentis, Luis},
-  booktitle={American Control Conference (ACC), 2017},
+  author={Thomas, Gray Cortright and Sentis, Luis},
+  booktitle={American Control Conference (ACC)},
   pages={4436--4441},
   year={2017},
   organization={IEEE}
@@ -61,7 +80,7 @@ code {
 <div id="RaoThomasSentisDeshpande2017ICRA"><code>
 @inproceedings{RaoThomasSentisDeshpande2017ICRA,
   title={Analyzing Achievable Stiffness Control Bounds of Robotic Hands With Compliantly Coupled Finger Joints},
-  author={Rao, Prashant and Thomas, Gray C and Sentis, Luis and Deshpande, Ashish},
+  author={Rao, Prashant and Thomas, Gray Cortright and Sentis, Luis and Deshpande, Ashish},
   booktitle={Robotics and Automation (ICRA), 2017 IEEE Conference on },
   year={2017},
   organization={IEEE}
@@ -71,7 +90,7 @@ code {
 <div id="ThomasSentis2016IROS"><code>
 @inproceedings{ThomasSentis2016IROS,
   title={Towards computationally efficient planning of dynamic multi-contact locomotion},
-  author={Thomas, Gray C and Sentis, Luis},
+  author={Thomas, Gray Cortright and Sentis, Luis},
   booktitle={Intelligent Robots and Systems (IROS), 2016 IEEE/RSJ International Conference on},
   pages={3879--3886},
   year={2016},
@@ -82,7 +101,7 @@ code {
 <div id="KimThomasSentis2015Humanoids"><code>
 @inproceedings{KimThomasSentis2015Humanoids,
   title={A method for dynamically balancing a point foot robot},
-  author={Kim, Donghyun and Thomas, Gray and Sentis, Luis},
+  author={Kim, Donghyun and Thomas, Gray Cortright and Sentis, Luis},
   booktitle={Humanoid Robots (Humanoids), 2015 IEEE-RAS 15th International Conference on},
   pages={901--907},
   year={2015},
@@ -92,8 +111,8 @@ code {
 </code></div>
 <div id="KimThomasSentis2014ICARCV"><code>
 @inproceedings{KimThomasSentis2014ICARCV,
-  title={Continuous cyclic stepping on 3d point-foot biped robots via constant time to velocity reversal},
-  author={Kim, Donghyun and Thomas, Gray and Sentis, Luis},
+  title={Continuous cyclic stepping on 3{D} point-foot biped robots via constant time to velocity reversal},
+  author={Kim, Donghyun and Thomas, Gray Cortright and Sentis, Luis},
   booktitle={Control Automation Robotics \& Vision (ICARCV), 2014 13th International Conference on},
   pages={1637--1643},
   year={2014},
@@ -104,7 +123,7 @@ code {
 <div id="KimZhaoThomasSentis2014DSC"><code>
 @inproceedings{KimZhaoThomasSentis2014DSC,
   title={Empirical Modifications to a Phase Space Planner Which Compensates for Low Stiffness Actuation in a Planar, Point-Foot, Biped Robot},
-  author={Kim, Donghyun and Zhao, Ye and Thomas, Gray and Sentis, Luis},
+  author={Kim, Donghyun and Zhao, Ye and Thomas, Gray Cortright and Sentis, Luis},
   booktitle={ASME 2014 Dynamic Systems and Control Conference},
   pages={V001T11A001--V001T11A001},
   year={2014},
@@ -115,7 +134,7 @@ code {
 <div id="KimKwokThomasSentis2014IROS"><code>
 @inproceedings{KimKwokThomasSentis2014IROS,
   title={Fully omnidirectional compliance in mobile robots via drive-torque sensor feedback},
-  author={Kim, Kwan Suk and Kwok, Alan S and Thomas, Gray C and Sentis, Luis},
+  author={Kim, Kwan Suk and Kwok, Alan S and Thomas, Gray Cortright and Sentis, Luis},
   booktitle={Intelligent Robots and Systems (IROS 2014), 2014 IEEE/RSJ International Conference on},
   pages={4757--4763},
   year={2014},
@@ -125,8 +144,8 @@ code {
 </code></div>
 <div id="KoolenEA2013Humanoids"><code>
 @inproceedings{KoolenEA2013Humanoids,
-  title={Summary of team IHMC's virtual robotics challenge entry},
-  author={Koolen, Twan and Smith, Jesper and Thomas, Gray and Bertrand, Sylvain and Carff, John and Mertins, Nathan and Stephen, Douglas and Abeles, Peter and Englsberger, Johannes and Mccrory, Stephen and others},
+  title={Summary of team {IHMC}'s virtual robotics challenge entry},
+  author={Koolen, Twan and Smith, Jesper and Thomas, Gray Cortright and Bertrand, Sylvain and Carff, John and Mertins, Nathan and Stephen, Douglas and Abeles, Peter and Englsberger, Johannes and Mccrory, Stephen and others},
   booktitle={Humanoid Robots (Humanoids), 2013 13th IEEE-RAS International Conference on},
   pages={307--314},
   year={2013},
@@ -137,7 +156,7 @@ code {
 <div id="ThomasGimenezChinCarmedelleHoover2012IDETC"><code>
 @inproceedings{ThomasGimenezChinCarmedelleHoover2012IDETC,
   title={Controllable, High Force Amplification Using Elastic Cable Capstans},
-  author={Thomas, Gray C and Gimenez, Clayton C and Chin, Erica D and Carmedelle, Andrew P and Hoover, Aaron M},
+  author={Thomas, Gray Cortright and Gimenez, Clayton C and Chin, Erica D and Carmedelle, Andrew P and Hoover, Aaron M},
   booktitle={ASME 2012 International Design Engineering Technical Conferences and Computers and Information in Engineering Conference},
   pages={885--889},
   year={2012},
@@ -148,7 +167,7 @@ code {
 <div id="CullerThomasLee2012SDM"><code>
 @inproceedings{CullerThomasLee2012SDM,
   title={A Perching Landing Gear for a Quadcopter},
-  author={Culler, Elsa and Thomas, Gray and Lee, Chris},
+  author={Culler, Elsa and Thomas, Gray Cortright and Lee, Chris},
   booktitle={53rd AIAA/ASME/ASCE/AHS/ASC Structures, Structural Dynamics and Materials Conference},
   doi={doi:10.2514/6.2012-1722},
   url={https://doi.org/10.2514/6.2012-1722},
