Updated papers (rachel, binghan, T-AC)

--- a/bib/gray.bib.html
+++ b/bib/gray.bib.html
@@ -15,10 +15,10 @@ code {
 @preamble{ " \newcommand{\noop}[1]{} " } % a do-nothing command that serves a purpose
 
 @unpublished{ThomasSentis2018TACpre,
-  title={Uncertainty—Shape Identification in the Frequency Domain},
+  title={Identifying H[infinity]-Models: An LMI Approach},
   author={Thomas, Gray Cortright and Sentis, Luis}, 
   year="\noop{3001} under review",
-  note=" submitted to IEEE Transactions on Automatic Control",
+  note="ArXiv:1802.07695. Submitted to IEEE Transactions on Automatic Control",
 }
 
 </code></div>
@@ -49,11 +49,11 @@ code {
 
 </code></div>
 <div id="ThomasHeSentis2018preACC"><code>
-@unpublished{ThomasHeSentis2018preACC,
+@unpublished{ThomasHeSentis2018ACC,
   title={Safety Control Synthesis with Input Limits: a Hybrid Approach},
   author={Thomas, Gray Cortright and He, Binghan and Sentis, Luis},
-  note={submitted to 2018 American Control Conference (ACC)},
-  year="\noop{3001}under review"
+  note={ArXiv:1802.10188 [math.OC]. Accepted for publication in 2018 American Control Conference (ACC)},
+  year="2018"
 }
 
 </code></div>
@@ -61,7 +61,7 @@ code {
 @unpublished{SchlossmanThomasSentis2018ICRApre,
   title={Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program},
   author={Schlossman, Rachel and Thomas, Gray Cortright and Sentis, Luis},
-  note={submitted to Robotics and Automation (ICRA), 2018 IEEE Conference on },
+  note={ArXiv:1802.10190 [CS.RO]. Submitted to Intelligent Robots and Systems (IROS), 2018 IEEE International Conference on },
   year="\noop{3001}under review"
 }
 
