--- a/publications.html
+++ b/publications.html
@@ -57,31 +57,32 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, and L. Sentis, "Uncertainty—Shape Identification in the Frequency Domain," submitted to IEEE T-AC <a href="Preprints/ThomasSentis2017preTAC.pdf">[pre-print]</a><a href="bib/gray.bib.html#ThomasSentis201X">[.bib]</a>
+<b>G. C. Thomas</b>, and L. Sentis, "Identifying H[infinity]-Models: An LMI Approach," submitted to IEEE T-AC <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis201X">[.bib]</a>
 </p>
 
 <p>
 D. Kim, Y. Zhao, <b>G. C. Thomas</b>, and L. Sentis, "Stabilizing Series-Elastic Point-Foot Bipeds Using Whole-Body Operational Space Control," IEEE Trans. Robot., vol. 32, no. 6, pp. 1362-1379, Dec. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC-Video 2016]</a><a href="http://ieeexplore.ieee.org/abstract/document/7736085/">[Link]</a><a href="https://www.researchgate.net/profile/Donghyun_Kim34/publication/309706836_Stabilizing_Series-Elastic_Point-Foot_Bipeds_Using_Whole-Body_Operational_Space_Control/links/5823f06408ae61258e3cd0c5.pdf">[pdf]</a><a href="bib/gray.bib.html#KimEA2016TRO">[.bib]</a>
 </p>
 <p>
-T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. E. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," Int. J. Humanoid Robot., 13, 1650007, Mar. 2016. <a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[Link]</a><a href="bib/gray.bib.html#KoolenEA2016IJHR">[.bib]</a>
+T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Englsberger, and J. E. Pratt, "Design of a Momentum-Based Control Framework and Application to the Humanoid Robot Atlas," Int. J. Humanoid Robot., 13, 1650007, Mar. 2016. <a href="http://humanoids2017.loria.fr/index.html%3Fp=338.html">[Winner, IJHR 2016 Best Paper Awards]</a><a href="http://wholebodycontrol.eu/awards.html">[Finalist, Best WBC Paper 2016]</a><a href="http://www.worldscientific.com/doi/abs/10.1142/S0219843616500079">[Link]</a><a href="bib/gray.bib.html#KoolenEA2016IJHR">[.bib]</a>
 </p>
 
 
 <h3>Conference</h3>
+
 <p>
-<b>G. C. Thomas</b>, B. He, and L. Sentis, "Safety Control Synthesis with Input Limits: a Hybrid Approach," submitted to <i>The American Control Conference</i>, Milwaukee, WI, 2018 
+R. Schlossman, <b>G. C. Thomas</b>, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," submitted to <i>The IEEE/RSJ International Conference on Intelligent Robots and Systems</i>,  Madrid, Spain, 2018 
+<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7963638/">[Link]</a> -->
-<a href="Preprints/ThomasHeSentis2018preACC.pdf">[pdf]</a> 
-<a href="bib/gray.bib.html#ThomasHeSentis2018preACC">[.bib]</a>
+<a href="https://arxiv.org/pdf/1802.10190.pdf">[ArXiv]</a> 
+<a href="bib/gray.bib.html#SchlossmanThomasSentis2018ICRApre">[.bib]</a>
 </p>
 
 <p>
-R. Schlossman, <b>G. C. Thomas</b>, and L. Sentis, "Toward Exploiting the Natural Dynamics of Series Elastic Robots by Actuator-Centered Sequential Linear Program," submitted to <i>IEEE Conference on Robitcs and Automation</i>, Brisbane, AU, 2018 
-<!-- <a href="http://ieeexplore.ieee.org/abstract/document/7759571/">[Link]</a>  -->
+<b>G. C. Thomas</b>, B. He, and L. Sentis, "Safety Control Synthesis with Input Limits: a Hybrid Approach," accepted for publication in <i>The American Control Conference</i>, Milwaukee, WI, 2018 
 <!-- <a href="http://ieeexplore.ieee.org/abstract/document/7963638/">[Link]</a> -->
-<a href="Preprints/SchlossmanThomasSentis2018ICRApre.pdf">[pdf]</a> 
-<a href="bib/gray.bib.html#SchlossmanThomasSentis2018ICRApre">[.bib]</a>
+<a href="https://arxiv.org/pdf/1802.10188.pdf">[ArXiv]</a> 
+<a href="bib/gray.bib.html#ThomasHeSentis2018preACC">[.bib]</a>
 </p>
 
 <p>
