now conditionally accepted

--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ document.location = "publications.m.html";
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, and L. Sentis, "Identifying H[infinity]-Models: An LMI Approach," submitted to IEEE T-AC <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis201X">[.bib]</a>
+<b>G. C. Thomas</b>, and L. Sentis, "Identifying H[infinity]-Models: An LMI Approach," conditionally accpeted to IEEE T-AC <a href="https://arxiv.org/pdf/1802.07695">[ArXiv]</a><a href="bib/gray.bib.html#ThomasSentis201X">[.bib]</a>
 </p>
 
 <p>
